# SIDE

./: .gitignore  .mlflowignore  README.md  experiment.sh  experiment_mlflow.sh  free_diskspace.sh  garbage_collection.sh  main.py  mlflow.db  old_trainer.sh  push2overleaf.sh  pyproject.toml  save_mlruns.sh  setup.py  start.sh  start_mlflow.sh  trainer.sh
configs/: DISP.yaml  MT-KD.yaml  MT.yaml  SEG.yaml  base.yaml  debug.yaml  debug_DISP.yaml  debug_MT-KD.yaml  default.yaml  overfit.yaml  seg.yaml  segmentation_teacher.yaml  wMT-KD.yaml  wMT.yaml
configs/convnext/: DISP.yaml  MT-KD.yaml  MT.yaml  SEG.yaml  wMT-KD.yaml  wMT.yaml
configs/exp01/: DISP.yaml  MT-KD.yaml  MT.yaml  SEG.yaml
configs/exp02/: DISP.yaml  MT-KD.yaml  MT.yaml
configs/exp04/: DISP.yaml  MT-KD.yaml  MT.yaml  SEG.yaml
configs/exp05/: DISP.yaml  MT-KD.yaml  MT.yaml  SEG.yaml
configs/exp06/: MT-KD.yaml  MT.yaml
configs/exp07/: MT-KD.yaml  MT.yaml  SEG.yaml
configs/exp08/: MT-KD.yaml
configs/exp09/: MT-KD.yaml
criterions/: automatic_weighted_loss.py  disparity.py  manager.py  segmentation.py  weighting.py  weighting_DEP.py
data/: datasets.py  transforms.py
metrics/: disparity.py  segmentation.py
models/: combiner.py  manager.py  simple_unet.py
notebooks/: check_intrinsics.py  dataset_stats.py  find_learning_rate.py  find_max_disparity.py  generate_dataset.py  learning_rate.py  model_state_evaluation.py  model_tester.py  test_model.py  test_model_state.py
processors/: base.py  tester.py  trainer.py
schedulers/: custom.py
tests/: test_loader.py  test_metrics.py
utils/: helpers.py  loader.py  logger.py  models.py  setup.py  visualization.py
(+127 files in other folders)
