[project]
name = "SIDE"
version = "0.1.0"
description = "Surgical Instrument Depth Estimation & Entity Segmentation"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "colorlog>=6.9.0",
    "ipykernel>=6.30.1",
    "mlflow>=3.4.0",
    "monai>=1.5.1",
    "nbformat>=5.10.4",
    "numpy>=2.1.2",
    "opencv-python>=4.12.0.88",
    "pillow>=11.0.0",
    "plotly>=6.3.0",
    "pytest>=8.4.2",
    "pyyaml>=6.0.2",
    "torch>=2.8.0",
    "torchvision>=0.23.0",
    "tqdm>=4.67.1",
]

[[tool.uv.index]]
url = "https://download.pytorch.org/whl/cu129"
explicit = true

[tool.pytest.ini_options]
pythonpath = ["."]